--- a/projects.html
+++ b/projects.html
@@ -29,19 +29,19 @@
   <div class="project-grid">
 
     <a class="project-card" href="projects/project1.html">
-     <img src="/img/s1.jpg" alt="Project 1">
+     <img src="/img/v1.png" alt="Project 1">
      <div class="overlay-black"></div>
      <div class="overlay-text">FROM FOREST TO FRAMEWORK <P>2024-2025</P></div>
     </a>
 
     <a href="projects/project2.html" class="project-card">
-      <img src="/img/s2.jpg" alt="Project 2">
+      <img src="/img/v2.png" alt="Project 2">
       <div class="overlay-black"></div>
       <div class="overlay-text">CULTIVATING CREATIVE RESILIENCE<P>2023-2024</P></div>
     </a>
 
     <a href="projects/project3.html" class="project-card">
-      <img src="/img/s3.jpg" alt="Project 3">
+      <img src="/img/v3.png" alt="Project 3">
       <div class="overlay-black"></div>
       <div class="overlay-text">BELARUSIAN LIBRARY<P>2023-2024</P></div>
     </a>
