Updated index, CSS, and project page 1; added new images

--- a/projects/project1.html
+++ b/projects/project1.html
@@ -145,40 +145,53 @@ beautiful and full of potential.</p>
   <a href="../img/F10.jpg" class="glightbox" data-gallery="project1-gallery" data-title="A3 Portrait">
     <img src="../img/F10.jpg" class="project-img a3-portrait" alt="A3 Portrait">
   </a>
+  <a href="../img/f14.jpg" class="glightbox" data-gallery="project1-gallery" data-title="Materials of a Regency house">
+    <img src="../img/f14.jpg" class="project-img a3-landscape" alt="A3 Landscape">
+  </a>
+  <a href="../img/f12.png" class="glightbox" data-gallery="project1-gallery" data-title="Anatomy of a london town house- book">
+    <img src="../img/f12.png" class="project-img a4-landscape" alt="A4 Landscape">
+  </a>
+</div>
+
+<div class="project-images">
   <a href="../img/F11.jpg" class="glightbox" data-gallery="project1-gallery" data-title="Thetford forest">
     <img src="../img/F11.jpg" class="project-img square" alt="square">
+  </a>
+  <a href="../img/f13.jpg" class="glightbox" data-gallery="project1-gallery" data-title="Continuous cover forestry">
+    <img src="../img/f13.jpg" class="project-img a4-landscape" alt="A4 Landscape">
   </a>
   <a href="../img/F9.jpg" class="glightbox" data-gallery="project1-gallery" data-title="Forest plantation">
     <img src="../img/F9.jpg" class="project-img a3-landscape" alt="A3 Landscape">
   </a>
 </div>
 
+
 <div class="project-images">
-  <a href="../img/F4.jpg" class="glightbox" data-gallery="project1-gallery" data-title="A3 Landscape">
+  <a href="../img/F4.jpg" class="glightbox" data-gallery="project1-gallery" data-title="Thetford town, fairfields house section">
     <img src="../img/F4.jpg" class="project-img a3-landscape" alt="A3 Landscape">
   </a>
-  <a href="../img/F1.jpg" class="glightbox" data-gallery="project1-gallery" data-title="A3 Portrait">
+  <a href="../img/F1.jpg" class="glightbox" data-gallery="project1-gallery" data-title="Site under construction">
     <img src="../img/F1.jpg" class="project-img a3-portrait" alt="A3 Portrait">
   </a>
-  <a href="../img/F3.jpg" class="glightbox" data-gallery="project1-gallery" data-title="square">
+  <a href="../img/F3.jpg" class="glightbox" data-gallery="project1-gallery" data-title="On site">
     <img src="../img/F3.jpg" class="project-img square" alt="square">
   </a>
 </div>
 
 <div class="project-images">
-  <a href="../img/F6.jpg" class="glightbox" data-gallery="project1-gallery" data-title="A4 Portrait">
+  <a href="../img/F6.jpg" class="glightbox" data-gallery="project1-gallery" data-title="An opening of an internal wall, aided by a tree fork cut to shape around the ceiling beam">
     <img src="../img/F6.jpg" class="project-img a4-portrait" alt="A4 Portrait">
   </a>
-  <a href="../img/F8.jpg" class="glightbox" data-gallery="project1-gallery" data-title="A4 Portrait">
+  <a href="../img/F8.jpg" class="glightbox" data-gallery="project1-gallery" data-title="Window sill, made from a thick, curved timber offcut">
     <img src="../img/F8.jpg" class="project-img a4-portrait" alt="A4 Portrait">
   </a>
-  <a href="../img/F7.jpg" class="glightbox" data-gallery="project1-gallery" data-title="A4 Portrait">
+  <a href="../img/F7.jpg" class="glightbox" data-gallery="project1-gallery" data-title="A broken banister post replaced with a juvenile trunk">
     <img src="../img/F7.jpg" class="project-img a4-portrait" alt="A4 Portrait">
   </a>
 </div>
 
 <div class="project-images">
-  <a href="../img/F2.jpg" class="glightbox" data-gallery="project1-gallery" data-title="square">
+  <a href="../img/F2.jpg" class="glightbox" data-gallery="project1-gallery" data-title="Tree fork">
     <img src="../img/F2.jpg" class="project-img square" alt="square">
   </a>
 </div>
