--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 
-<div class="background-slideshow">
-  <div class="slide" style="background-image: url('/img/A1.png');"></div>
-  <div class="slide" style="background-image: url('/img/A5.png');"></div>
-  <div class="slide" style="background-image: url('/img/A2.png');"></div>
-  <div class="slide" style="background-image: url('/img/A4.png');"></div>
-  <div class="slide" style="background-image: url('/img/A6.png');"></div>
-  <div class="slide" style="background-image: url('/img/A3.png');"></div>
-</div>
+<section class="hero-section">
+  <div class="slideshow">
+    <div class="slide active" style="background-image: url('img/A1.png');"></div>
+    <div class="slide" style="background-image: url('img/A5.png');"></div>
+    <div class="slide" style="background-image: url('img/A2.png');"></div>
+    <div class="slide" style="background-image: url('img/A6.png');"></div>
+    <div class="slide" style="background-image: url('img/A3.png');"></div>
+  </div>
 
 <header>
   <div class="container">
@@ -41,21 +41,45 @@
   <!-- No content here, leave empty for visual space if needed -->
 </main>
 
-<section class="about-preview">
-  <div class="container">
+<div class="home-preview-row">
+  <section class="preview-box">
+    <h2>Projects</h2>
+    <p>
+      Explore a range of creative and architectural projects, from concept to completion.<br>
+      <a href="projects.html">Read more →</a>
+    </p>
+    <p>Selected works</p>
+  </section>
+  <section class="preview-box about-preview">
     <h2>About Me</h2>
     <p>
-      I’m an artist and designer interested in the relationship between material, scale, and memory.
-      My work includes drawing, spatial design, and architectural study.
+      I’m an artist and designer interested in the relationship between material, scale, and memory.<br>
       <a href="about.html">Read more →</a>
     </p>
     <p>arb / RIBA Part 2 Architectural Assistant</p>
-  </div>
-</section>
+  </section>
+  <section class="preview-box">
+    <h2>Drawings</h2>
+    <p>
+      Discover my drawing portfolio, exploring form, space, and narrative.<br>
+      <a href="drawings.html">Read more →</a>
+    </p>
+    <p>Sketches, studies, and visual experiments</p>
+  </section>
+  <section class="preview-box">
+    <h2>Contact Me</h2>
+    <p>
+      Get in touch for collaborations, commissions, or just to say hello.<br>
+      <a href="contact.html">Read more →</a>
+    </p>
+    <p>Email, social links, and more</p>
+  </section>
+</div>
 
 <footer>
   <p> ALEX VALENTINE EVDOKIMOV 2025</p>
 </footer>
+
 <script>
   const path = window.location.pathname.toLowerCase();
 
@@ -73,48 +97,19 @@
 </script>
 
 <script>
-  document.addEventListener('DOMContentLoaded', function () {
-    const slideshow = document.querySelector('.background-slideshow');
+  document.addEventListener("DOMContentLoaded", function () {
+    const slides = document.querySelectorAll(".slide");
+    let current = 0;
 
-    // Clear anything inside the slideshow
-    slideshow.innerHTML = '';
+    function showNextSlide() {
+      slides[current].classList.remove("active");
+      current = (current + 1) % slides.length;
+      slides[current].classList.add("active");
+    }
 
-    // List of your image file paths
-    const images = [
-      '/img/A1.png',
-      '/img/A5.png',
-      '/img/A2.png',
-      '/img/A4.png',
-      '/img/A6.png',
-      '/img/A3.png'
-    ];
-
-    // Loop through each image and create a slide
-    images.forEach(function (image, index) {
-      const slide = document.createElement('div');
-      slide.className = 'slide';
-      slide.style.backgroundImage = `url('${image}')`;
-      slide.style.animationDelay = `${index * 8}s`; // delay each slide
-      slideshow.appendChild(slide);
-    // Make first image fully visible right away
-  if (index === 0) {
-    slide.style.opacity = '1';
-  }
-
-  slideshow.appendChild(slide);
-    });
+    setInterval(showNextSlide, 9000);
   });
-
-  
-
-  
 </script>
-
-
-</body>
-</div>
-
-
 
 
 </body>
