Updated index, CSS, and drawings page; added new images

--- a/drawings.html
+++ b/drawings.html
@@ -34,15 +34,7 @@
            style="width: calc(14.8 * var(--cm)); height: calc(21 * var(--cm));">
       <div class="drawing-meta">A5 – Portrait – Pen – 2020</div>
     </div>
-
-    <!-- A3 Portrait -->
-    <div class="drawing-piece">
-      <img src="img/T2.png" alt="A3 Portrait"
-           class="drawing-img"
-           style="width: calc(29.7 * var(--cm)); height: calc(42 * var(--cm));">
-      <div class="drawing-meta">A3 – Portrait – Pen & Airbrush – 2021</div>
-    </div>
-
+    
     <!-- A3 Landscape -->
     <div class="drawing-piece">
       <img src="img/T5.png" alt="A3 Landscape"
@@ -83,6 +75,22 @@
        <div class="drawing-meta">A4 – Portrait – Pen – 2020</div>
     </div>
 
+    <!-- A3 Portrait -->
+    <div class="drawing-piece">
+      <img src="img/T2.png" alt="A3 Portrait"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(42 * var(--cm));">
+      <div class="drawing-meta">A3 – Portrait – Pen & Airbrush – 2021</div>
+    </div>
+
+    <!-- A4 Portrait -->
+     <div class="drawing-piece">
+      <img src="img/t17.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">A4 – Portrait – Pen – 2024</div>
+    </div>
+
     <!-- A4 Portrait -->
      <div class="drawing-piece">
       <img src="img/T8.png" alt="A4 Portrait"
@@ -115,12 +123,35 @@
        <div class="drawing-meta">A4 – Portrait – Pen & stamp – 2024</div>
     </div>
 
+    <!-- A4 Portrait -->
+     <div class="drawing-piece">
+      <img src="img/t19.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">A4 – Portrait – Pen – 2024</div>
+    </div>
+
      <!-- A3 Landscape -->
     <div class="drawing-piece">
       <img src="img/T4.png" alt="A3 Landscape"
            class="drawing-img"
            style="width: calc(42 * var(--cm)); height: calc(29.7 * var(--cm));">
       <div class="drawing-meta">A3 – Landscape – Pen – 2022</div>
+    </div>
+
+    <div class="drawing-piece">
+      <img src="img/t22.png" alt="A5 Portrait"
+           class="drawing-img"
+           style="width: calc(14.8 * var(--cm)); height: calc(21 * var(--cm));">
+      <div class="drawing-meta">A5 – Portrait – Pen – 2020</div>
+    </div>
+
+    <!-- A4 Portrait -->
+     <div class="drawing-piece">
+      <img src="img/t16.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">A4 – Portrait – Pen – 2024</div>
     </div>
 
      <!-- A3 Landscape -->
@@ -130,6 +161,87 @@
            style="width: calc(42 * var(--cm)); height: calc(29.7 * var(--cm));">
       <div class="drawing-meta">A3 – Landscape – Pen – 2023</div>
     </div>
+
+       <!-- A4 Portrait -->
+     <div class="drawing-piece">
+      <img src="img/t24.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">A4 – Portrait – Pen & stamp – 2024</div>
+    </div>
+
+    <!-- A3 Portrait -->
+    <div class="drawing-piece">
+      <img src="img/t15.png" alt="A3 Portrait"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(42 * var(--cm));">
+      <div class="drawing-meta">A3 – Portrait – Pen & Airbrush – 2021</div>
+    </div>
+
+    <!-- A4 Portrait -->
+     <div class="drawing-piece">
+      <img src="img/t25.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">A4 – Portrait – Pen & stamp – 2024</div>
+    </div>
+
+    <!-- A4 Portrait -->
+     <div class="drawing-piece">
+      <img src="img/t18.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">A4 – Portrait – Pen & stamp – 2024</div>
+    </div>
+
+    <!-- A3 Landscape -->
+    <div class="drawing-piece">
+      <img src="img/t14.png" alt="A3 Landscape"
+           class="drawing-img"
+           style="width: calc(42 * var(--cm)); height: calc(29.7 * var(--cm));">
+      <div class="drawing-meta">A3 – Landscape – Pen – 2023</div>
+    </div>
+
+<!-- A4 Portrait -->
+     <div class="drawing-piece">
+      <img src="img/t26.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">A4 – Portrait – Pen – 2024</div>
+    </div>
+
+    <!-- A4 Landscape -->
+    <div class="drawing-piece">
+      <img src="img/t23.png" alt="A4 Landscape"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
+      <div class="drawing-meta">A4 – Landscape – Pen – 2021</div>
+    </div>
+
+    <!-- A4 Portrait -->
+     <div class="drawing-piece">
+      <img src="img/t27.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">A4 – Portrait – Pen – 2024</div>
+    </div>
+
+    <!-- A4 Portrait -->
+     <div class="drawing-piece">
+      <img src="img/t21.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">A4 – Portrait – Pen – 2024</div>
+    </div>
+
+    <!-- A4 Portrait -->
+     <div class="drawing-piece">
+      <img src="img/t20.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">A4 – Portrait – Pen – 2024</div>
+    </div>
+
 
   </div>
 </main>
