Updated index, CSS, projects, and drawings page; added new images, project12, project13, project 14

--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
     </a>
 
     <a href="projects/project9.html" class="project-card">
-      <img src="img/F3.jpg" alt="Project 9">
+      <img src="img/v4.png" alt="Project 9">
       <div class="overlay-black"></div>
       <div class="overlay-text">SEARCH FOR A NEW HOME<P>2020-2021</P></div>
     </a>
@@ -92,6 +92,24 @@
       <img src="img/S10.jpg" alt="Project 9">
       <div class="overlay-black"></div>
       <div class="overlay-text">DAMAGE<P>2022-2023</P></div>
+    </a>
+
+    <a href="projects/project12.html" class="project-card">
+      <img src="img/v7.png" alt="Project 12">
+      <div class="overlay-black"></div>
+      <div class="overlay-text">A SCANNERS DAY<P>2018-2019</P></div>
+    </a>
+
+    <a href="projects/project13.html" class="project-card">
+      <img src="img/v5.png" alt="Project 13">
+      <div class="overlay-black"></div>
+      <div class="overlay-text">CANOE<P>2018-2019</P></div>
+    </a>
+
+    <a href="projects/project14.html" class="project-card">
+      <img src="img/v6.png" alt="Project 14">
+      <div class="overlay-black"></div>
+      <div class="overlay-text">PLASTER<P>2018-2019</P></div>
     </a>
     <!--
      Add more as needed -->
