--- a/projects/project12.html
+++ b/projects/project12.html
@@ -44,7 +44,7 @@
 <main class="project-container">
   <div class="project-sidebar">
     <div class="project-info">
-      <h2>DAMAGE</h2>
+      <h2>A SCANNERS DAY</h2>
       
       
       <p><strong>Description:</strong> </p>
@@ -55,18 +55,34 @@
   </div>
 
 <div class="project-images">
-      <a href="../img/Z1.jpg" class="glightbox" data-gallery="project-gallery" data-title="SITE PLAN">
-      <img src="../img/Z1.jpg" alt="Artwork 1" class="project-img a4-portrait" />
+      <a href="../img/d8.jpg" class="glightbox" data-gallery="project-gallery" data-title="SITE PLAN">
+      <img src="../img/d8.jpg" alt="Artwork 1" class="project-img a4-portrait" />
     </a>
-    <a href="../img/Z2.jpg" class="glightbox" data-gallery="project-gallery" data-title="Artwork 3">
-      <img src="../img/Z2.jpg" alt="Artwork 3" class="project-img a4-portrait" />
+    <a href="../img/d1.jpg" class="glightbox" data-gallery="project-gallery" data-title="Artwork 3">
+      <img src="../img/d1.jpg" alt="Artwork 3" class="project-img a4-portrait" />
     </a>
-    <a href="../img/Z3.jpg" class="glightbox" data-gallery="project-gallery" data-title="SITE PLAN">
-      <img src="../img/Z3.jpg" alt="Artwork 1" class="project-img a4-portrait" />
+    <a href="../img/d2.jpg" class="glightbox" data-gallery="project-gallery" data-title="SITE PLAN">
+      <img src="../img/d2.jpg" alt="Artwork 1" class="project-img a4-portrait" />
     </a>
-    <a href="../img/Z4.jpg" class="glightbox" data-gallery="project-gallery" data-title="Artwork 3">
-      <img src="../img/Z4.jpg" alt="Artwork 3" class="project-img a4-portrait" />
-  
+    <a href="../img/d4.jpg" class="glightbox" data-gallery="project-gallery" data-title="Artwork 3">
+      <img src="../img/d4.jpg" alt="Artwork 3" class="project-img a4-portrait" />
+    </a>
+     <a href="../img/d5.jpg" class="glightbox" data-gallery="project-gallery" data-title="SITE PLAN">
+      <img src="../img/d5.jpg" alt="Artwork 1" class="project-img a4-portrait" />
+    </a>
+    <a href="../img/d6.jpg" class="glightbox" data-gallery="project-gallery" data-title="Artwork 3">
+      <img src="../img/d6.jpg" alt="Artwork 3" class="project-img a4-portrait" />
+    </a>
+     </a>
+     <a href="../img/d7.jpg" class="glightbox" data-gallery="project-gallery" data-title="SITE PLAN">
+      <img src="../img/d7.jpg" alt="Artwork 1" class="project-img a4-portrait" />
+    </a>
+    <a href="../img/d9.jpg" class="glightbox" data-gallery="project-gallery" data-title="Artwork 3">
+      <img src="../img/d9.jpg" alt="Artwork 3" class="project-img a4-portrait" />
+    </a>
+    <a href="../img/d10.jpg" class="glightbox" data-gallery="project-gallery" data-title="Artwork 3">
+      <img src="../img/d10.jpg" alt="Artwork 3" class="project-img a4-portrait" />
+    </a>
   
 </div>
 
@@ -86,14 +102,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css">
 
 <!-- Left Arrow -->
-<a href="project10.html" class="project-nav left" aria-label="Previous project">
+<a href="project11.html" class="project-nav left" aria-label="Previous project">
   <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
     <polyline points="15 18 9 12 15 6" />
   </svg>
 </a>
 
 <!-- Right Arrow -->
-<a href="project1.html" class="project-nav right" aria-label="Next project">
+<a href="project13.html" class="project-nav right" aria-label="Next project">
   <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
     <polyline points="9 18 15 12 9 6" />
   </svg>
@@ -106,9 +122,9 @@
     // Only navigate projects if GLightbox is NOT open
     if (!document.body.classList.contains('glightbox-open')) {
       if (e.key === 'ArrowLeft') {
-        window.location.href = "project10.html"; // or your previous project
+        window.location.href = "project11.html"; // or your previous project
       } else if (e.key === 'ArrowRight') {
-        window.location.href = "project12.html"; // or your next project
+        window.location.href = "project13.html"; // or your next project
       }
     }
   });
