--- a/projects/project9.html
+++ b/projects/project9.html
@@ -65,12 +65,22 @@ language is used as a reaction to the collapse of the soviet union.
 
 
   <div class="project-images">
-    <a href="../img/U1.jpg" class="glightbox" data-gallery="project-gallery" data-title="SITE PLAN">
-      <img src="../img/U1.jpg" alt="Artwork 1" class="project-img a3-landscape" />
+    <a href="../img/p3.jpg" class="glightbox" data-gallery="project-gallery" data-title="Artwork 5">
+      <img src="../img/p3.jpg" alt="Artwork 5" class="project-img a4-portrait" />
     </a>
-    <a href="../img/U3.jpg" class="glightbox" data-gallery="project-gallery" data-title="Artwork 3">
-      <img src="../img/U3.jpg" alt="Artwork 3" class="project-img a3-landscape" />
+      <a href="../img/p5.jpg" class="glightbox" data-gallery="project-gallery" data-title="Artwork 4">
+      <img src="../img/p5.jpg" alt="Artwork 4" class="project-img a4-landscape" />
     </a>
+    <a href="../img/p1.jpg" class="glightbox" data-gallery="project-gallery" data-title="Artwork 5">
+      <img src="../img/p1.jpg" alt="Artwork 5" class="project-img a4-portrait" />
+    </a>
+     <a href="../img/p2.jpg" class="glightbox" data-gallery="project-gallery" data-title="Artwork 5">
+      <img src="../img/p2.jpg" alt="Artwork 5" class="project-img a4-portrait" />
+    </a>
+    <a href="../img/p4.jpg" class="glightbox" data-gallery="project-gallery" data-title="Artwork 4">
+      <img src="../img/p4.jpg" alt="Artwork 4" class="project-img a4-landscape" />
+    </a>
+     
   </div>
 
 <div class="under-construction-overlay">
