Update styles.css and drawings.html with new button design and layout improvements

--- a/drawings.html
+++ b/drawings.html
@@ -25,8 +25,7 @@
   <div class="header-divider"></div>
 </header>
 
-<main class="drawings-gallery">
-  <div class="sort-sidebar">
+<div class="sorting-bar">
   <button class="sort-btn" data-type="year" data-state="none">Year</button>
   <button class="sort-btn" data-type="size" data-state="none">Size</button>
   <button class="sort-btn" data-type="orientation" data-state="none">Orientation</button>
