Update styles.css and drawings.html with new button design and layout improvements

--- a/drawings.html
+++ b/drawings.html
@@ -428,7 +428,7 @@
   </div>
 </div>
 
-    <!-- A3 Portrait -->
+    <!-- A3 Landscape -->
     <div class="drawing-piece">
       <img src="img/t60.png" alt="A3 Landscape"
            class="drawing-img"
@@ -549,6 +549,18 @@
   </div>
 </div>
 
+<!-- A4 Portrait -->
+     <div class="drawing-piece">
+      <img src="img/t90.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2021 – Pen on paper</div>
+    <div class="meta-size">210 x 297mm</div>
+  </div>
+</div>
+
     <div class="drawing-piece">
       <img src="img/z28.png" alt="A5 Portrait"
            class="drawing-img"
@@ -641,6 +653,18 @@
   </div>
 </div>
 
+<!-- A3 Landscape -->
+    <div class="drawing-piece">
+      <img src="img/t86.png" alt="A3 Landscape"
+           class="drawing-img"
+           style="width: calc(42 * var(--cm)); height: calc(29.7 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.421</h3>
+    <div class="meta-medium">2025 – Pen on paper</div>
+    <div class="meta-size">420 x 297mm</div>
+  </div>
+</div>
+
     <div class="drawing-piece">
       <img src="img/z39.png" alt="E4 Square"
            class="drawing-img"
@@ -673,6 +697,18 @@
     <h3>No.095</h3>
     <div class="meta-medium">2018 – Pen on paper</div>
     <div class="meta-size">420 x 297mm</div>
+  </div>
+</div>
+
+ <!-- A3 Portrait -->
+    <div class="drawing-piece">
+      <img src="img/t88.png" alt="A3 Portrait"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(42 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2015 – Pen on paper</div>
+    <div class="meta-size">297 x 420mm</div>
   </div>
 </div>
 
@@ -795,6 +831,20 @@
   </div>
 </div>
 
+<!-- A4 Landscape -->
+    <div class="drawing-piece">
+      <img src="img/t92.png" alt="A4 Landscape"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2020 – Pen on paper</div>
+    <div class="meta-size">297 x 210mm</div>
+  </div>
+</div>
+
+
+
     <div class="drawing-piece">
       <img src="img/z31.png" alt="E1 Landscape"
            class="drawing-img"
@@ -900,6 +950,18 @@
   </div>
 </div>
 
+<!-- A3 Portrait -->
+    <div class="drawing-piece">
+      <img src="img/t89.png" alt="A3 Portrait"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(42 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2015 – Pen on paper</div>
+    <div class="meta-size">297 x 420mm</div>
+  </div>
+</div>
+
     <!-- A3 Landscape -->
     <div class="drawing-piece">
       <img src="img/t49.png" alt="A3 Landscape"
@@ -961,6 +1023,33 @@
   </div>
 </div>
 
+
+
+<!-- A4 Portrait -->
+     <div class="drawing-piece">
+      <img src="img/t91.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2021 – Pen on paper</div>
+    <div class="meta-size">210 x 297mm</div>
+  </div>
+</div>
+
+<!-- A3 Portrait -->
+    <div class="drawing-piece">
+      <img src="img/t87.png" alt="A3 Portrait"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(42 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2015 – Pen on paper</div>
+    <div class="meta-size">297 x 420mm</div>
+  </div>
+</div>
+
+
     <div class="drawing-piece">
       <img src="img/z33.png" alt="E1 Portrait"
            class="drawing-img"
@@ -969,6 +1058,18 @@
     <h3>No.000</h3>
     <div class="meta-medium">2019 – Pen on paper</div>
     <div class="meta-size">120 x 145mm</div>
+  </div>
+</div>
+
+<!-- A4 Landscape -->
+    <div class="drawing-piece">
+      <img src="img/t93.png" alt="A4 Landscape"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2020 – Pen on paper</div>
+    <div class="meta-size">297 x 210mm</div>
   </div>
 </div>
 
